2011-06-03  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        DOMWindow::setLocation doesn't understand that DOMWindow can be inactive
        https://bugs.webkit.org/show_bug.cgi?id=62057

        Test that some esoteric combination of eval, load, and Location don't
        do something goofy.

        * http/tests/security/xss-DENIED-contentWindow-eval-expected.txt: Added.
        * http/tests/security/xss-DENIED-contentWindow-eval.html: Added.

2011-06-03  James Simonsen  <simonjam@chromium.org>

        [Chromium] Unreviewed, baseline for full-screen-placeholder. More flakiness for svg/zoom and navigator.

        * platform/chromium-win/fullscreen/full-screen-placeholder-expected.txt: Added.
        * platform/chromium/test_expectations.txt:

2011-05-31  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Ryosuke Niwa.

        [GTK] Support smart replace for the pasteboard
        https://bugs.webkit.org/show_bug.cgi?id=61734

        Unskip tests which are now passing and update results for other tests
        which vary depending on smart replace support.

        * platform/gtk/Skipped: Unskip tests which are now passing.
        * platform/gtk/editing/deleting/smart-delete-003-expected.txt:
        * platform/gtk/editing/deleting/smart-delete-004-expected.txt:
        * platform/gtk/editing/pasteboard/4944770-2-expected.txt:
        * platform/gtk/editing/pasteboard/drag-drop-modifies-page-expected.txt:
        * platform/gtk/editing/pasteboard/smart-paste-007-expected.txt:
        * platform/gtk/editing/pasteboard/smart-paste-008-expected.txt:
        * platform/gtk/editing/pasteboard/subframe-dragndrop-1-expected.txt:
        * platform/gtk/fast/lists/drag-into-marker-expected.txt:

2011-06-03  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Dimitri Glazkov.

        Teach Gtk build about window.internals
        https://bugs.webkit.org/show_bug.cgi?id=61071
