@@ -3997,3 +3997,23 @@ BUGWK61936 : fast/filesystem/filesystem-no-callback-null-ptr-crash.html = CRASH 
 BUGABARTH LINUX : svg/text/scaling-font-with-geometric-precision.html = IMAGE PASS
 
 BUGCR84906 MAC : fast/dom/navigator-detached-no-crash.html = TEXT
+
+BUGCR84157 : plugins/embed-attributes-style.html = IMAGE+TEXT
+BUGCR84157 : svg/as-image/svg-as-background-with-relative-size.html = IMAGE+TEXT
+BUGCR84157 : svg/custom/embedding-external-svgs.xhtml = IMAGE+TEXT
+BUGCR84157 : svg/dynamic-updates/SVGFEDropShadowElement-dom-shadow-color-attr.html = IMAGE
+BUGCR84157 : svg/dynamic-updates/SVGFEDropShadowElement-dom-shadow-opacity-attr.html = IMAGE
+BUGCR84157 : svg/dynamic-updates/SVGFEDropShadowElement-svgdom-shadow-color-prop.html = IMAGE
+BUGCR84157 : svg/dynamic-updates/SVGFEDropShadowElement-svgdom-shadow-opacity-prop.html = IMAGE
+BUGCR84157 : fast/dom/object-plugin-hides-properties.html = TEXT
+BUGCR84157 : fast/js/property-getters-and-setters.html = TEXT
+BUGCR84157 : fast/canvas/canvas-as-image-incremental-repaint.html = IMAGE
+BUGCR84157 : fast/canvas/canvas-as-image.html = IMAGE
+BUGCR84157 : fast/canvas/canvas-bg-zoom.html = IMAGE
+BUGCR84157 : fast/canvas/canvas-bg.html = IMAGE
+BUGCR84157 : fast/canvas/canvas-currentColor.html = TEXT
+BUGCR84157 : fast/canvas/canvas-fillPath-shadow.html = TEXT
+BUGCR84157 : fast/canvas/canvas-transform-skewed.html = IMAGE
+BUGCR84157 : fast/canvas/zero-size-fill-rect.html = IMAGE
+BUGCR84157 : media/video-canvas-alpha.html = IMAGE
+
